[project]
name = "word-stack-cli"
version = "1.0.0"
description = "An educational CLI tool to save and study English words."
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
]

[project.scripts]
word-stack = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
