[project]
name = "word-stack"
version = "0.3.0"
description = "A powerful, terminal-based vocabulary builder and daily study tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
]

[project.scripts]
word-stack = "word_stack.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
